# cjk

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
data/: jouyou.txt  kanji_puns.txt
src/: lib.rs
tests/: characters.rs  codepoints.rs  kana.rs  kanji.rs  properties.rs  radicals.rs  reference.rs  variants.rs  wot.rs
tests/data/: wall_of_text_ja.txt  wall_of_text_ko.txt  wall_of_text_vi.txt  wall_of_text_zh.txt  wall_of_text_zh_min_nan.txt
wikipedia_data/: jouyou.txt
